Add CSS to project - COMMIT TWO
- Add description to pastry recipe; each recipe has description
- Add image to main homepage; download and save in folder. Give alt
- Resize homepage image; ideally change to header later (width of page)

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@
     font-family: Monaco, "Lucinda Console", monospace;
 }
 
+#bananabread {
+    height: 500px;
+    width: auto;
+}
+
 .unorderedhome {
     line-height: 4;
     list-style-type: none;
