--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,11 @@
 .unorderedhome {
     line-height: 4;
     list-style-type: none;
-    columns: 2;
 }
 
+#homepageimage {
+    height: 100px;
+    width: auto;
+    display: block;
+    margin-left: 60px;
+}
