- Add back button to each recipe using <button> el - Button not yet functioning; add link? - Add 'column-count' to index styles; nicer layout, less scrolling down - Change button content to 'Home' - Border on blueberry cake ugly; no margin - Change border colour to grey and add 20px bottom-margin

--- a/recipes/recipestyles.css
+++ b/recipes/recipestyles.css
@@ -12,9 +12,22 @@
 }
 
 .bloobingredients {
-    border: 3px solid blue;
+    border: 3px solid grey;
+    margin-bottom: 20px;
 }
 
 .bloobmethod {
-    border: 3px solid blue;
+    border: 3px solid grey;
 }
+
+.back-button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    margin: 70px 50% 70px;
+    cursor: pointer;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+  }
+  
